# Evans-Musical-Granular

./: CMakeLists.txt  README.md  dsp.cpp  params.cpp  plugin.cpp  plugin.h  utils.cpp
.github/workflows/: build.yml
